--- a/css/estilos.css
+++ b/css/estilos.css
@@ -92,7 +92,7 @@ nav ul li a:hover {
 .section-vision.matrimonio h3{
     font-family:Verdana, Geneva, Tahoma, sans-serif;
     margin: 5%;
-    color: rgba(10, 10, 10, 0.959);
+    color: rgba(255, 255, 255, 0.959);
     font-size: 4vh;
     text-align: center;
 }
@@ -134,7 +134,9 @@ nav ul li a:hover {
 .foot{
     text-align: center;
     letter-spacing: 4px;
-    background-image: linear-gradient(to right top, #eaecb3, #ffe5bd, #ffe2d1, #ffe5e6, #ffeaf4, #fbebf6, #f7ecf7, #f3edf7, #ede9f1, #e7e5ea, #e1e0e3, #dcdcdc);
+    position: relative;
+    text-decoration: none;
+    width: 100%;
     }
 
 .boda{
@@ -178,7 +180,7 @@ background-attachment: fixed;
     
     background-repeat:no-repeat;
     background-size:cover;
-    margin: auto;
+   
 }
 
 .barra li{
@@ -226,7 +228,7 @@ background-attachment: fixed;
 }
 
 .galeria{
-    background-color: rgba(255, 252, 226, 0.897);
+    background-color: rgba(136, 161, 140, 0.897);
     width: 100%;
     margin:auto;
     display:flex;
@@ -241,6 +243,7 @@ background-attachment: fixed;
  object-fit: cover;
    margin-bottom: 20px;
    border-radius: 5px;
+   background-color: rgba(245, 185, 185, 0.849);
 }
   
 .texto-boda{
@@ -394,7 +397,9 @@ background-attachment: fixed;
 
 .texto-boda5{
     font-family: 'Nanum Myeongjo', serif;
-    font-size: 4vh;
+    font-size: 2.7vh;
+    color: #f0e2dce1;
+    text-align: center;
 }
 
 .texto-boda2{
@@ -521,12 +526,9 @@ background-attachment: fixed;
     background-color: rgba(187, 70, 70, 0.205);
     color: rgb(255, 254, 251);
     font-family: 'Nanum Myeongjo', serif;
-    transition: transform 2s;
+    
 }
 
-.card:hover{ transform: translate(20px, 20px); scale: (2,2);
-
-}
 .card-body{
     color: rgb(49, 48, 47);
 }
@@ -541,19 +543,33 @@ background-attachment: fixed;
 .card-body{
     color: bisque;
 }
-
-.container2{
-    font-family: 'Nanum Myeongjo', serif;
-    color: rgba(8, 37, 7, 0.911);
-    display:flex;
-    justify-content: space-evenly;
-    align-items: center;
-    background-color: rgba(168, 189, 54, 0.473);
-    margin: 1%;
-    padding: 1%;
-    object-fit: cover;
-    height: 125vh;
-    width: 100%;
-    
-
+.card-text{
+    font-size: 1rem;
 }
+.card-title{
+    font-size: 1.5rem;
+}
+.section-vision{
+    background-image: url(../assets/images/manos.jpg);
+    background-repeat:no-repeat;
+    background-size:cover;
+    background-attachment: fixed;
+    display:inline-block;
+    z-index: -1;
+    filter:brightness(70%);
+    top:50%;
+    left:50%;
+    min-width: 100%;
+    min-height: 100%;
+}
+
+@media screen and  (min-width: 767px){
+    .card{
+        font-size: 2rem;
+
+    }
+      .body{
+
+      } 
+
+   
