--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -3,7 +3,7 @@ $tipografia-general: 'Nanum Myeongjo', serif;
 $tipografia-alternativa: Verdana, Geneva, Tahoma, sans-serif;
 $display: flex;
 $objet-fit: cover;
-$colortext:color:rgba(10, 10, 10, 0.959);
+$colortext:rgba(10, 10, 10, 0.959);
 $font-size: 1rem;
 $font-size: 2rem;
 $font-size: 3rem;
@@ -13,9 +13,3 @@ $text-align: right;
 
 /*maps*/
 
-$estilos: (
-color:black;
-centro:center;
-tfuente:50px;
-1rem : 1rem;
-);
