--- a/sass/estilos.scss
+++ b/sass/estilos.scss
@@ -14,8 +14,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,400;0,500;0,600;0,700;1,700&family=Hind:wght@400;500&family=Nanum+Myeongjo:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,400;0,500;0,600;0,700;1,700&family=Hind:wght@400;500&family=Inter:wght@300&family=Nanum+Myeongjo:wght@700&display=swap');
 
-
-
+.iconos a{
+    margin: 3%;
+    text-align: center;
+}
 
 
  
