--- a/css/estilos.css
+++ b/css/estilos.css
@@ -266,7 +266,7 @@ body {
 
 .texto-boda p {
   font-family: 'Hind', sans-serif;
-  font-size: 1rem; }
+  font-size: 0.9rem; }
 
 .section-vision h3 {
   font-family: "Nanum Myeongjo", serif;
@@ -394,8 +394,8 @@ body {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   margin: 5%;
   color: rgba(16, 17, 16, 0.959);
-  font-size: 3vh;
-  text-align: left; }
+  font-size: 2.6vh;
+  text-align: center; }
 
 .intro {
   font-family: "Nanum Myeongjo", serif;
@@ -476,19 +476,21 @@ body {
   text-align: center;
   font-family: "Nanum Myeongjo", serif;
   color: rgba(8, 37, 7, 0.911);
-  padding: 1%; }
+  padding: 1%;
+  font-size: 1.3rem; }
 
 .texto-bodau {
   text-align: center;
   font-family: "Nanum Myeongjo", serif;
-  color: rgba(8, 37, 7, 0.911); }
+  color: rgba(190, 101, 29, 0.911);
+  font-size: 2rem; }
 
 .texto-boda4 {
   font-family: "Nanum Myeongjo", serif;
   margin: 5%;
-  color: rgba(16, 17, 16, 0.959);
-  font-size: 4vh;
-  text-align: left; }
+  color: rgba(15, 15, 14, 0.959);
+  text-align: center;
+  font-size: 1.2rem; }
 
 .texto-boda5 {
   text-align: center; }
@@ -589,7 +591,3 @@ body {
 .row {
   width: 80%;
   margin: auto; }
-
-.iconos a {
-  margin: 3%;
-  text-align: center; }
