--- a/sass/_mediaq.scss
+++ b/sass/_mediaq.scss
@@ -16,6 +16,21 @@
     .texto-n{
         font-size: rem;
     }
+    .boda{
+        width: 100%;
+    }
+    .boda1{
+        width: 100%;
+    }
+    .boda2{
+        width: 100%;
+    }
+    .boda3{
+        width: 100%;
+    }
+    .boda4{
+        width: 100%;
+    }
 }
 
 @media screen and  (min-width: 412px){
