--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,10 +1,5 @@
 @charset "UTF-8";
 /*maps*/
-@import url("https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,200;0,300;1,400&family=Montserrat:wght@200;300;400&family=Open+Sans:wght@300;400;800&family=Poppins:wght@300&family=Roboto+Slab:wght@300;400;500&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,400;0,500;0,600;0,700;1,700&family=Roboto:wght@900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,400;0,500;0,600;0,700;1,700&family=Hind:wght@400;500&family=Nanum+Myeongjo:wght@700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,400;0,500;0,600;0,700;1,700&family=Hind:wght@400;500&family=Inter:wght@300&family=Nanum+Myeongjo:wght@700&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -591,3 +586,29 @@ body {
 .row {
   width: 80%;
   margin: auto; }
+
+.card {
+  transition: all 2s;
+  z-index: 1; }
+
+.card:hover {
+  filter: brightness(100%);
+  transform: scale(1.2);
+  z-index: 10;
+  overflow: hidden;
+  cursor: zoom-in;
+  align-self: center; }
+
+.card:click {
+  filter: brightness(100%);
+  transform: scale(1.2);
+  z-index: 10;
+  cursor: zoom-in;
+  align-self: center; }
+
+.card:focus {
+  filter: brightness(100%);
+  transform: scale(1.2);
+  z-index: 10;
+  cursor: zoom-in;
+  align-self: center; }
