--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -4,15 +4,18 @@
     position: relative;
     text-decoration: none;
     width: 100%;
+    position: fixed;
     }
 
     .foot{
     
         background-repeat:no-repeat;
         background-size:$objet-fit; 
+        position: fixed;
     }
     
     .iconos a{
         margin: 3%;
         text-align: center;
+        position: fixed;
     }
