grabo para proyecto final

--- a/sass/_fuentesytexto.scss
+++ b/sass/_fuentesytexto.scss
@@ -217,7 +217,7 @@
     font-family:$tipografia-alternativa;
     margin: 5%;
     color: rgba(16, 17, 16, 0.959);
-    font-size: 3vh;
+    font-size: 1.2rem;
     text-align: $centrado;
 }
 .for{
