--- a/css/estilos.css
+++ b/css/estilos.css
@@ -103,9 +103,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
-  filter: brightness(90%);
-  width: 100%;
-  display: flex; }
+  filter: brightness(90%); }
 
 .boda1 {
   background-image: url(./../assets/images/fotosofi.jpg.jpg);
@@ -193,6 +191,32 @@
   position: static;
   top: 0px;
   z-index: -10; }
+
+.card {
+  transition: all 2s;
+  z-index: 1; }
+
+.card:hover {
+  filter: brightness(100%);
+  transform: scale(1.1);
+  z-index: 10;
+  overflow: hidden;
+  cursor: zoom-in;
+  align-self: center; }
+
+.card:click {
+  filter: brightness(100%);
+  transform: scale(1.2);
+  z-index: 10;
+  cursor: zoom-in;
+  align-self: center; }
+
+.card:focus {
+  filter: brightness(100%);
+  transform: scale(1.1);
+  z-index: 10;
+  cursor: zoom-in;
+  align-self: center; }
 
 .boda {
   position: static;
@@ -433,7 +457,7 @@ body {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   margin: 5%;
   color: rgba(16, 17, 16, 0.959);
-  font-size: 3vh;
+  font-size: 1.2rem;
   text-align: center; }
 
 .for {
@@ -597,29 +621,3 @@ body {
 .row {
   width: 80%;
   margin: auto; }
-
-.card {
-  transition: all 2s;
-  z-index: 1; }
-
-.card:hover {
-  filter: brightness(100%);
-  transform: scale(1.1);
-  z-index: 10;
-  overflow: hidden;
-  cursor: zoom-in;
-  align-self: center; }
-
-.card:click {
-  filter: brightness(100%);
-  transform: scale(1.2);
-  z-index: 10;
-  cursor: zoom-in;
-  align-self: center; }
-
-.card:focus {
-  filter: brightness(100%);
-  transform: scale(1.1);
-  z-index: 10;
-  cursor: zoom-in;
-  align-self: center; }
