--- a/sass/_images.scss
+++ b/sass/_images.scss
@@ -4,8 +4,6 @@
     background-size:$objet-fit;
     background-attachment: fixed;
     filter: brightness(90%);
-    width: 100%;
-    display: flex;
     }
     .boda1{
         background-image: url(./../assets/images/fotosofi.jpg.jpg);
@@ -98,3 +96,25 @@
         top: 0px;
         z-index: -10;
     }
+    .card {
+        transition: all 2s;
+        z-index: 1; }
+        .card:hover {
+          filter: brightness(100%);
+          transform: scale(1.1);
+          z-index: 10;
+          overflow: hidden;
+          cursor: zoom-in;
+          align-self: center; }
+        .card:click {
+          filter: brightness(100%);
+          transform: scale(1.2);
+          z-index: 10;
+          cursor: zoom-in;
+          align-self: center; }
+        .card:focus {
+          filter: brightness(100%);
+          transform: scale(1.1);
+          z-index: 10;
+          cursor: zoom-in;
+          align-self: center; }
