--- a/sass/_images.scss
+++ b/sass/_images.scss
@@ -1,12 +1,13 @@
 .boda{
-    background-image: url(./../assets/images/fotosofi.jpg.jpg);
+    background-image: url(./../assets/images/anillodebodas.jpg);
     background-repeat:no-repeat;
-    background-size:$objet-fit;
     background-attachment: fixed;
-    filter: brightness(90%);
+    filter: brightness(100%);
+    background-size:$objet-fit;
+    width: 100%;
     }
     .boda1{
-        background-image: url(./../assets/images/fotosofi.jpg.jpg);
+    background-image: url(./../assets/images/fondodorado.jpg.jpg);
     background-repeat:no-repeat;
     background-size:$objet-fit;
     background-attachment: fixed;
@@ -27,14 +28,14 @@
         filter: brightness(90%);
     }
     .boda4{
-        background-image: url(./../assets/images/fotosofi.jpg.jpg);
+        background-image: url(./../assets/images/fondodorado.jpg.jpg);
         background-repeat:no-repeat;
         background-size:$objet-fit;
         background-attachment: fixed;  
         filter: brightness(90%);
     }
     .section-vision{
-        background-image: url(../assets/images/fondoverdecito.jpg.jpg);
+        background-image: url(../assets/images/rosas.jpg);
         background-repeat:no-repeat;
         background-size:$objet-fit;
         background-attachment: fixed;
