grabo antes de entregar

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -389,7 +389,7 @@ body {
   border-bottom: 3px; }
 
 .s {
-  text-align: left;
+  text-align: center;
   font-family: "Nanum Myeongjo", serif;
   margin: 10%; }
 
